@@ -1,3 +1,8 @@
+*otopi-1.1.3 (04 Mar 2014)
+
+  04 Mar 2014; Alon Bar-Lev <alonbl@gentoo.org> +otopi-1.1.3.ebuild:
+  Version bump
+
   02 Dec 2013; Alon Bar-Lev <alonbl@gentoo.org> otopi-1.0.1.ebuild,
   otopi-1.1.2.ebuild, otopi-9999.ebuild:
   python fixups
